Task5/2_api_and_admin_network_policies.yaml
# Egress по умолчанию разрешены на всех подах, ограничиваем только ingress
---
# API контур: разрешает входящий трафик к back-end-api с front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-end-api-ingress-policy
  namespace: network-policies-test
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end
  policyTypes:
    - Ingress
---
# API контур: разрешает входящий трафик к front-end с back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-end-ingress-policy
  namespace: network-policies-test
spec:
  podSelector:
    matchLabels:
      role: front-end
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: back-end-api
  policyTypes:
    - Ingress
---
# ADMIN-UX контур: разрешает входящий трафик к admin-back-end с admin-front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-back-end-ingress-policy
  namespace: network-policies-test
spec:
  podSelector:
    matchLabels:
      role: admin-back-end
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
  policyTypes:
    - Ingress
---
# ADMIN-UX контур: разрешает входящий трафик к admin-front-end с admin-back-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-front-end-ingress-policy
  namespace: network-policies-test
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin-back-end
  policyTypes:
    - Ingress
